Initial repository analysis and build setup
Co-authored-by: Y0gant <128639764+Y0gant@users.noreply.github.com>